UPDATE: Fix broken dark mode ink

--- a/packages/hashi/_index.scss
+++ b/packages/hashi/_index.scss
@@ -1,5 +1,5 @@
-///
-//  Copyright (c) 2022 Dev Protocol
+//
+//  Copyright (c) 2023 Dev Protocol
 //
 //  Permission is hereby granted, free of charge, to any person obtaining a copy
 //  of this software and associated documentation files (the "Software"), to deal
@@ -18,7 +18,7 @@
 //  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 //  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 //  SOFTWARE.
-///
+//
 
 $modular-mode: false !default;
 
@@ -42,7 +42,7 @@ $small: () !default;
 $background: 'dp-white.200' !default;
 $dark-background: 'dp-blue-grey.600' !default;
 $background-ink: 'dp-white.ink' !default;
-$dark-background-ink: $background-ink !default;
+$dark-background-ink: 'dp-blue-grey.ink' !default;
 $breakpoints: () !default;
 
 $dark-mode: 'attribute' !default;
